# bigquery-connector

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  main.py  main_to_bq.py  proc.sql  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml
docker/: docker-compose.yaml
model/: __init__.py  neo4j-gds.proto  neo4j_gds_pb2.py  test_neo4j_gds_pb2.py  translate.py
pattern_parser/: Pattern.g4  Pattern.py  PatternLexer.py  PatternListener.py  PatternParser.py  __init__.py
src/: main.py  main_to_bq.py
src/model/: __init__.py  neo4j-gds.proto  neo4j_gds_pb2.py  translate.py
src/pattern_parser/: Pattern.g4  Pattern.py  PatternLexer.py  PatternListener.py  PatternParser.py
src/templates/: __init__.py  bigquery.py  bq_client.py  constants.py  mapper.py  model.py  util.py  vendored.py
templates/: __init__.py  _bq_client.py  bigquery.py  bq_client.py  constants.py  dataproc.py  util.py  util_test.py  vendored.py
tests/integration/: conftest.py  graph.json  test_templates.py
tests/unit/model/: test_neo4j_gds_pb2.py
tests/unit/templates/: mapper_test.py  util_test.py
